# elm-vs-yew

./: .gitignore  README.md  compile.js  home.mustache  index.js  make.sh  package.json  server.js  view.js
elm/: README.md  elm.json  package-lock.json  package.json
elm/config/: webpack.config.prod.js
elm/public/: index.html
elm/src/: Main.elm  Ports.elm  index.js  main.css
style/: homepage.css  main.css
yew/: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
yew/netlify/: index.html
yew/src/: app.rs  lib.rs  new_app.rs  utils.rs
yew/static/: index.html  style.scss
