[package]
name = "yeww"
version = "0.0.1"
authors = ["Tommaso Pifferi"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'DomRect',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'Node',
  'Window',
]
